add: game joining Logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-# 4 PostgreSQL
+# PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/tictactoe_db
 spring.datasource.username=tictactoe_admin
 spring.datasource.password=tictactoe$1234
 spring.datasource.driver-class-name=org.postgresql.Driver
-# 4 JPA
+# JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+# session
+spring.session.store-type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
