--- a/ticktacktoe-web/package.json
+++ b/ticktacktoe-web/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tresjs/core": "^4.2.9",
+    "three": "^0.168.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
