--- a/infrastructure/docker-compose.yaml
+++ b/infrastructure/docker-compose.yaml
@@ -1,12 +1,17 @@
 version: '3.1'
 
 services:
-  db:
-    image: postgres
+#  db: // not needed for now
+#    image: postgres
+#    restart: unless-stopped
+#    environment:
+#      POSTGRES_DB: tictactoe_db
+#      POSTGRES_USER: tictactoe_admin
+#      POSTGRES_PASSWORD: tictactoe$1234
+#    ports:
+#      - "5432:5432"
+  redis:
+    image: redis
     restart: unless-stopped
-    environment:
-      POSTGRES_DB: tictactoe_db
-      POSTGRES_USER: tictactoe_admin
-      POSTGRES_PASSWORD: tictactoe$1234
     ports:
-      - "5432:5432"
+      - "6379:6379"
